Fixed contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .selected {
-    background-color: darkblue;
+    background-color: #0067b0;
     color: white;
-    border-color: darkblue;
+    border-color: #0067b0;
 }
   
